--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-			<title>My Portfolio</title>
+			<title>Yiqiu's Web</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -137,7 +137,6 @@
 							<section id="four">
 								<div class="container">
 									<h2>Contact Me</h2>
-<br>
 <br>
 
 									<section>
